test/org/midica/testfiles/failing/eff-flow-note-not-set-2.midica
INCLUDE inc/instruments.midica


0: port_ctrl.on()
